@@ -24,8 +24,6 @@ import springfox.documentation.swagger.web.SecurityConfigurationBuilder;
 import javax.servlet.http.HttpServletResponse;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -40,13 +38,17 @@ public class SpringFoxConfig {
     /**
      * The Constant DEFAULT_PRODUCES_CONSUMES.
      */
-    private static final Set<String> DEFAULT_PRODUCES_CONSUMES =
-            new HashSet<>(Collections.singletonList(MediaType.APPLICATION_JSON_VALUE));
+    private static final Set<String> DEFAULT_PRODUCES_CONSUMES = Set.of(MediaType.APPLICATION_JSON_VALUE);
 
     /**
      * The constant USER_TAG.
      */
     public static final String USER_TAG = "user";
+
+    /**
+     * The constant CARD_TAG.
+     */
+    public static final String CARD_TAG = "card";
 
     private final List<Response> globalResponses = Arrays.asList(
             new ResponseBuilder()
@@ -76,10 +78,11 @@ public class SpringFoxConfig {
     public Docket api() {
         return new Docket(DocumentationType.OAS_30).select()
                 .apis(RequestHandlerSelectors.basePackage("com.crio.cred")).build()
-                .tags(new Tag(USER_TAG, "User Operations"))
+                .tags(new Tag(USER_TAG, "User Operations"),
+                        new Tag(CARD_TAG, "Card Operations"))
                 .apiInfo(apiInfo())
-                .securityContexts(Collections.singletonList(securityContext()))
-                .securitySchemes(Collections.singletonList(authenticationScheme))
+                .securityContexts(List.of(securityContext()))
+                .securitySchemes(List.of(authenticationScheme))
                 .produces(DEFAULT_PRODUCES_CONSUMES)
                 .consumes(DEFAULT_PRODUCES_CONSUMES)
                 .useDefaultResponseMessages(false)
@@ -132,7 +135,7 @@ public class SpringFoxConfig {
                 = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Collections.singletonList(new SecurityReference("JWT", authorizationScopes));
+        return List.of(new SecurityReference("JWT", authorizationScopes));
     }
 
     /**
